--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ build/
 !**/src/test/**/build/
 **/src/main/resources/application.properties
 src/main/resources/application.properties
+src/main/resources/application-dev.properties
+src/main/resources/application-local.properties
 
 ### STS ###
 .apt_generated
